Draft design into HTML5/CSS3/jQuery 5

--- a/index.html
+++ b/index.html
@@ -816,7 +816,7 @@
     <!--begin 4 sprint-->
     <div id="accordion" class="sprint_total">
       <h3 class="title_sprint" >Sprint 1</h3>
-      <div class="sprint_1 sprint">
+      <div class="sprint_1 sprint sprint-active">
         <div class="s2b_column_4 hide_backlog ">
           <div class="padding_5 ">
             <div class="status_sprint">
@@ -2362,9 +2362,8 @@
           <span ><img src="images/icon-left.png"></span>
         </div>
       </div>
-      <h3>Sprint 2</h3>
-      
-      <div class="sprint_1 sprint">
+      <h3 class="title_sprint" >Sprint 2</h3>
+      <div class="sprint_2 sprint">
         <div class="s2b_column_4 hide_backlog ">
           <div class="padding_5 ">
             <div class="status_sprint">
@@ -3911,8 +3910,8 @@
         </div>
       </div>
       
-      <h3>Sprint 3</h3>
-      <div class="sprint_1 sprint">
+      <h3 class="title_sprint" >Sprint 3</h3>
+      <div class="sprint_3 sprint">
         <div class="s2b_column_4 hide_backlog ">
           <div class="padding_5 ">
             <div class="status_sprint">
@@ -5459,8 +5458,8 @@
         </div>
       </div>  
 
-      <h3>Sprint 4</h3>
-      <div class="sprint_1 sprint">
+      <h3 class="title_sprint" >Sprint 4</h3>
+      <div class="sprint_4 sprint">
         <div class="s2b_column_4 hide_backlog ">
           <div class="padding_5 ">
             <div class="status_sprint">
